# bitcoiners-dca

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Dockerfile  LICENSE.md  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.gitea/workflows/: build-image.yml  security.yml  test.yml
.githooks/: pre-commit
docs/: DEPLOYMENT.md  EXECUTION_MODES.md  EXPANSION_NOTES.md  FUNDING_MONITOR.md  HETZNER_DR_RUNBOOK.md  HOSTED_DEPLOYMENT.md  LICENSE_KEY_ROTATION.md  MANUAL_TENANT_OPS.md  MOBILE_UI_AUDIT_2026-05-16.md  OVERNIGHT_PLAN.md  ROUTING.md  STRATEGIES.md  TIERS.md  V05_RELEASE_NOTES.md  V06_RELEASE_NOTES.md  dev_prod_runbook.md  dockerfile_hardening_plan.md
hosted/: backup_hetzner_tenants.sh  docker-compose.provisioner.yml  docker-compose.tenant.yml  entrypoint.sh  nginx.conf.template  provision.sh  provisioner.Dockerfile  provisioner_service.py  setup_dockers_lxc.sh  setup_tenants_lxc.sh  tenants.example.yaml
infra/: tenant-keep-warm.sh
scripts/: generate_license.py
src/bitcoiners_dca/: cli.py
src/bitcoiners_dca/core/: arbitrage.py  backtest.py  funding_monitor.py  historical_prices.py  license.py  lightning.py  market_data.py  models.py  notifications.py  onchain.py  pro_api_client.py  pro_api_status.py  risk.py  router.py  routing.py  scheduler.py  strategy.py
src/bitcoiners_dca/exchanges/: base.py  binance.py  bitoasis.py  okx.py
src/bitcoiners_dca/persistence/: db.py  reports.py  secrets.py
src/bitcoiners_dca/strategies/: __init__.py  base.py  dip.py  drawdown.py  multi_asset.py  onchain.py  time_of_day.py  volatility.py
src/bitcoiners_dca/utils/: config.py
src/bitcoiners_dca/web/: config_writer.py  dashboard.py  jinja_env.py
src/bitcoiners_dca/web/templates/: _base.html  backtest.html  balances.html  exchanges.html  overview.html  prices.html  routes.html  settings.html  strategy.html  trades.html  withdrawals.html
src/bitcoiners_dca/web/templates/partials/: balances_table.html  overview_stats.html  prices_table.html  status_banner.html  trades_list.html
tests/: test_adapter_money_paths.py  test_arbitrage.py  test_backtest.py  test_bitoasis_retry.py  test_bitoasis_sweep.py  test_cf_gate_middleware.py  test_config_writer.py  test_csrf_middleware.py  test_cycle_lock.py  test_effective_fee.py  test_exchanges_page.py  test_funding_monitor.py  test_idempotency.py  test_license.py  test_lightning.py  test_limit_orders.py  test_maker_mode.py  test_market_data.py  test_multi_asset_plan.py  test_notify_classification.py  test_okx_aed_fee_override.py  test_okx_retry_filter.py  test_partial_status.py  test_per_pair_fees.py  test_persistence.py  test_pro_api_currency_guard.py  test_pro_api_reprice.py  test_reports.py  test_risk.py  test_router.py  test_router_multihop.py  test_routing_model.py  test_scheduler.py  test_scheduler_cycle_guard.py  test_scheduler_risk_hot_reload.py  test_secret_store.py  test_strategy.py  test_strategy_balances.py  test_strategy_budget.py  test_strategy_multihop.py  (+2 more)
umbrel/: README.md  docker-compose.yml  exports.sh  umbrel-app.yml
